work/step_5/slurm-430663.out
SLURM_CPUS_PER_TASK = 28
SLURM_MEM_PER_NODE = 256000
  File "main.py", line 40
    f.write(f"RKS energy: {ene_mf: 12.8f}\n")
                                           ^
SyntaxError: invalid syntax
